feat: all front and backend routes now render something without erroring (Profile, Notifications) in particular
